--- a/_users/C1200.md
+++ b/_users/C1200.md
@@ -9,6 +9,7 @@ facebook:
 twitter: https://twitter.com/c1200games
 github: https://github.com/C1200/
 email: coreyw.ultimatemedia@gmail.com
+more: https://goum.cf/u/c1200
 ---
 
-Hello! I am Corey (AKA C1200) and I am a hobbyist web dev and video creator. I am also (as you can probably tell) the admin of this website.
+I make things.
