--- a/_users/C1200.md
+++ b/_users/C1200.md
@@ -9,7 +9,7 @@ facebook:
 twitter: https://twitter.com/c1200games
 github: https://github.com/C1200/
 email: coreyw.ultimatemedia@gmail.com
-more: https://goum.cf/u/c1200
+other: https://goum.cf/u/c1200
 ---
 
 I make things.
